products/bridge/bridge-web/infra/cd/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  namespace: xbridge-fe
  labels:
    app.kubernetes.io/name: xbridge-fe
